--- a/challenge_2/client/view.ejs
+++ b/challenge_2/client/view.ejs
@@ -19,6 +19,10 @@
         <%- totalCsv %>
       </div>
     </form>
+    <br>
+    <form action="/download" method="get">
+      <input type="submit" id="download" value="Download CSV File">
+    </form>
     <script src="./app.js"></script>
   </body>
 </html>
